objects/Product2.object
<CustomObject>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</description>
        <inlineHelpText>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewable</fullName>
                    <default>true</default>
                    <label>Renewable</label>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this product is taxable.</description>
        <inlineHelpText>Indicates whether this product is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountLevel__c</fullName>
        <description>Level of subscription term that&apos;s used to calculated term discount.</description>
        <inlineHelpText>Specify subscription term level that should be used in calculating term discount. Leave blank to indicate default.</inlineHelpText>
        <label>Term Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term.</description>
        <inlineHelpText>Schedule for discounts based on subscription term.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Term Discounted Products</relationshipLabel>
        <relationshipName>TermDiscountedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeCredit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credit product quoted when upgrading this product.</description>
        <inlineHelpText>Use to specify credit when quoting upgrades to this product.</inlineHelpText>
        <label>Upgrade Credit</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Credited Products</relationshipLabel>
        <relationshipName>CreditedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeRatio__c</fullName>
        <description>The conversion rate between this upgrade product and its source product.</description>
        <inlineHelpText>The conversion rate between this product&apos;s quantity and that of its source product.</inlineHelpText>
        <label>Upgrade Ratio</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the product being upgraded.</description>
        <inlineHelpText>Product being upgraded. Populating this field makes this product an upgrade.</inlineHelpText>
        <label>Upgrade Source</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Target Upgrades</relationshipLabel>
        <relationshipName>TargetUpgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being upgraded to.</description>
        <inlineHelpText>Specify the upgraded product. Only applicable if this product is an upgrade as indicated by Upgrade Source field being populated or having related Upgrade Source records.</inlineHelpText>
        <label>Upgrade Target</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Source Upgrades</relationshipLabel>
        <relationshipName>SourceUpgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Include_or_Exclude_Maintenance</fullName>
        <active>true</active>
        <description>Validates that either Includes In Maintenance or Excludes From Maintenance checkbox is checked but not both.</description>
        <errorConditionFormula>AND(SBQQ__IncludeInMaintenance__c,SBQQ__ExcludeFromMaintenance__c)</errorConditionFormula>
        <errorMessage>You must check either Include In Maintenance or Exclude From Maintenance checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Term_schedule_requires_subscription</fullName>
        <active>true</active>
        <description>Ensures only subscription products have Term Discount Schedule field populated.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;&apos;),NOT(ISBLANK(SBQQ__TermDiscountSchedule__c)))</errorConditionFormula>
        <errorDisplayField>SBQQ__TermDiscountSchedule__c</errorDisplayField>
        <errorMessage>Only subscription products may specify term discount schedule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is selected as One-Time, Billing Frequency must not be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
</CustomObject>